cabal-version: 2.4
name:          Sokoban
version:       0.1.0.0
synopsis:      Sokoban game in Haskell
author:        Benjamin Kovach
maintainer:    bkovach5@uga.edu
category:      Game
build-type:    Simple

library
  hs-source-dirs:   src
  build-depends:
    , base          ^>=4.12
    , directory     ^>=1.3
    , gloss         ^>=1.13
    , mtl           ^>=2.2
    , parsec        ^>=3.1
    , transformers  ^>=0.5.6

  exposed-modules:
    Engine.Update
    IO.LevelParser
    IO.Save
    Types.Button
    Types.Game
    Types.Level
    Types.Misc
    Types.Square

  default-language: Haskell2010

executable Sokoban
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
    , base          ^>=4.12
    , Sokoban

  default-language: Haskell2010
