cabal-version: 2.4
name:          Sokoban
version:       0.1.0.0
synopsis:      Sokoban game in Haskell
author:        Benjamin Kovach
maintainer:    bkovach5@uga.edu
category:      Game
build-type:    Simple
tested-with:   GHC ==8.6.5 || ==8.8.2

common common
  build-depends:    base >=4.12 && <4.14
  default-language: Haskell2010

library
  import:          common
  hs-source-dirs:  src
  build-depends:
    , directory
    , gloss         ^>=1.13
    , mtl           ^>=2.2
    , parsec
    , transformers

  exposed-modules:
    Engine.Update
    IO.LevelParser
    IO.Save
    Types.Button
    Types.Game
    Types.Level
    Types.Misc
    Types.Square

executable Sokoban
  import:         common
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  Sokoban
  ghc-options:    -O2
