cabal-version: 2.4
name:          Sokoban
version:       0.1.0.0
synopsis:      Sokoban game in Haskell
author:        Benjamin Kovach
maintainer:    bkovach5@uga.edu
category:      Game
build-type:    Simple
tested-with:   GHC ==8.6.5 || ==8.8.4 || ==8.10.2

common common
  build-depends:    base >=4.12 && <4.15
  default-language: Haskell2010

library
  import:          common
  hs-source-dirs:  src
  build-depends:
    , directory     ^>=1.3
    , gloss         ^>=1.13
    , mtl           ^>=2.2
    , parsec        ^>=3.1
    , transformers  ^>=0.5

  exposed-modules:
    Engine.Update
    IO.LevelParser
    IO.Save
    Types.Button
    Types.Game
    Types.Level
    Types.Misc
    Types.Square

executable Sokoban
  import:         common
  main-is:        app/Main.hs
  build-depends:  Sokoban
  ghc-options:    -O2
